[gd_scene load_steps=2 format=2]

[ext_resource path="res://Src/Components/HealthComponent.gd" type="Script" id=1]

[node name="HealthComponent" type="Node"]
script = ExtResource( 1 )

[node name="TakeDamageTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="TakeDamageTimer" to="." method="_on_TakeDamageTimer_timeout"]
